--- a/WMFComponents/Sources/WMFComponents/Components/Editors/Common Views/Input Accessory Views/Expanding/WMFEditorToolbarExpandingView.xib
+++ b/WMFComponents/Sources/WMFComponents/Components/Editors/Common Views/Input Accessory Views/Expanding/WMFEditorToolbarExpandingView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="iN0-l3-epB" userLabel="Expanding Edit Toolbar View" customClass="WKEditorToolbarExpandingView" customModule="WMFComponents">
+        <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="iN0-l3-epB" userLabel="Expanding Edit Toolbar View" customClass="WMFEditorToolbarExpandingView" customModule="WMFComponents">
             <rect key="frame" x="0.0" y="0.0" width="954" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -34,7 +34,7 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="g2p-oh-oje" userLabel="Primary Stack View">
                                                             <rect key="frame" x="66" y="0.0" width="393" height="44"/>
                                                             <subviews>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="q5y-cw-4pq" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="q5y-cw-4pq" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="0.0" y="4" width="54.333333333333336" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
@@ -44,19 +44,19 @@
                                                                         <constraint firstAttribute="width" constant="1" id="KWY-7m-geZ"/>
                                                                     </constraints>
                                                                 </imageView>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Ep4-cb-vlw" userLabel="Citation Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Ep4-cb-vlw" userLabel="Citation Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="67.333333333333343" y="4" width="54.666666666666657" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="lOp-Bv-UED" userLabel="Link Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="lOp-Bv-UED" userLabel="Link Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="127.66666666666667" y="4" width="54.666666666666671" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="2n5-hY-lF5" userLabel="Template Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="2n5-hY-lF5" userLabel="Template Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="188.33333333333334" y="4" width="54.333333333333343" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Oyz-BA-g0g" userLabel="Media Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Oyz-BA-g0g" userLabel="Media Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="248.66666666666671" y="4" width="54.333333333333343" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
@@ -66,7 +66,7 @@
                                                                         <constraint firstAttribute="width" constant="1" id="li3-OD-31r"/>
                                                                     </constraints>
                                                                 </imageView>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="ysd-bl-nOt" userLabel="Find in Page Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="ysd-bl-nOt" userLabel="Find in Page Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="316" y="4" width="77" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
@@ -86,11 +86,11 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="1bz-lo-Qsh" userLabel="Secondary Stack View">
                                                             <rect key="frame" x="16" y="0.0" width="393" height="44"/>
                                                             <subviews>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="6o2-fI-FeG" userLabel="Unordered List Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="6o2-fI-FeG" userLabel="Unordered List Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="0.0" y="4" width="41" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Usg-R3-2O9" userLabel="Ordered List Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Usg-R3-2O9" userLabel="Ordered List Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="47" y="4" width="41.333333333333343" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
@@ -100,11 +100,11 @@
                                                                         <constraint firstAttribute="width" constant="1" id="Zti-tk-EM4"/>
                                                                     </constraints>
                                                                 </imageView>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="yOi-nA-z5s" userLabel="Decrease Indention Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="yOi-nA-z5s" userLabel="Decrease Indention Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="101.33333333333337" y="4" width="41" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="YcQ-k6-ZuB" userLabel="Increase Indention Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="YcQ-k6-ZuB" userLabel="Increase Indention Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="148.33333333333337" y="4" width="41.333333333333343" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
@@ -114,19 +114,19 @@
                                                                         <constraint firstAttribute="width" constant="1" id="cSl-ZD-jie"/>
                                                                     </constraints>
                                                                 </imageView>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="kgt-gx-B2i" userLabel="Cursor Up Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="kgt-gx-B2i" userLabel="Cursor Up Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="202.66666666666663" y="4" width="41" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="R3Q-hM-v0V" userLabel="Cursor Down Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="R3Q-hM-v0V" userLabel="Cursor Down Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="249.66666666666663" y="4" width="41" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Vh2-x6-dCr" userLabel="Cursor Left Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="Vh2-x6-dCr" userLabel="Cursor Left Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="296.66666666666663" y="4" width="41.333333333333314" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
-                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="q6d-fY-Su5" userLabel="Cursor Right Button" customClass="WKEditorToolbarButton" customModule="WMFComponents">
+                                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="36" translatesAutoresizingMaskIntoConstraints="NO" id="q6d-fY-Su5" userLabel="Cursor Right Button" customClass="WMFEditorToolbarButton" customModule="WMFComponents">
                                                                     <rect key="frame" x="344" y="4" width="49" height="36"/>
                                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 </view>
@@ -193,7 +193,7 @@
                                 </mask>
                             </variation>
                         </scrollView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jLt-zh-HFv" customClass="WKEditorToolbarNavigatorButton" customModule="WMFComponents">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jLt-zh-HFv" customClass="WMFEditorToolbarNavigatorButton" customModule="WMFComponents">
                             <rect key="frame" x="884" y="10" width="0.0" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="width" id="Nuv-a3-wfO"/>
