--- a/Wikipedia/Code/WMFCaptchaViewController.storyboard
+++ b/Wikipedia/Code/WMFCaptchaViewController.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="sIA-fC-CW8">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="sIA-fC-CW8">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,20 +16,20 @@
                         <viewControllerLayoutGuide type="bottom" id="NcO-7E-4V6"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="2UF-VY-OwF">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="230"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="251"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Fwq-2f-06F">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="230"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="251"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mNx-mW-Gkz" userLabel="Spacer">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="15"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="26"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" priority="999" constant="15" id="7O4-2u-BnX"/>
+                                            <constraint firstAttribute="height" priority="999" constant="26" id="7O4-2u-BnX"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VLd-Yl-D3C">
-                                        <rect key="frame" x="0.0" y="18" width="320" height="22"/>
+                                        <rect key="frame" x="0.0" y="29" width="320" height="22"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="999" constant="22" id="FVc-wo-vWs"/>
                                         </constraints>
@@ -40,7 +38,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" text="Subtitle" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0To-aV-npg" customClass="WMFAuthLinkLabel" customModule="Wikipedia" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="43" width="320" height="27"/>
+                                        <rect key="frame" x="0.0" y="54" width="320" height="37"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="999" constant="18" id="k8C-fr-UaJ"/>
                                         </constraints>
@@ -49,14 +47,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eUx-N5-RC8" userLabel="Spacer">
-                                        <rect key="frame" x="0.0" y="73" width="320" height="5"/>
+                                        <rect key="frame" x="0.0" y="94" width="320" height="5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="999" constant="5" id="bxe-bh-aKM"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BYt-jz-uGn" userLabel="Container for borders">
-                                        <rect key="frame" x="0.0" y="81" width="320" height="91"/>
+                                        <rect key="frame" x="0.0" y="102" width="320" height="91"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2g-BG-mmO">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
@@ -151,13 +149,13 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hPb-fs-NA1" userLabel="Spacer">
-                                        <rect key="frame" x="0.0" y="175" width="320" height="5"/>
+                                        <rect key="frame" x="0.0" y="196" width="320" height="5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="999" constant="5" id="LjY-2r-iuf"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ou5-rd-yNs">
-                                        <rect key="frame" x="0.0" y="183" width="320" height="16"/>
+                                        <rect key="frame" x="0.0" y="204" width="320" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="999" constant="16" id="615-wX-SKK"/>
                                         </constraints>
@@ -166,7 +164,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter CAPTCHA text" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="gPg-cg-Yjy" customClass="WMFThemeableTextField">
-                                        <rect key="frame" x="0.0" y="202" width="320" height="28"/>
+                                        <rect key="frame" x="0.0" y="223" width="320" height="28"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="999" constant="28" id="FGZ-UY-edA"/>
                                         </constraints>
@@ -197,7 +195,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="230"/>
+                    <size key="freeformSize" width="320" height="251"/>
                     <connections>
                         <outlet property="captchaImageView" destination="ubi-fl-THX" id="M7P-e6-2ct"/>
                         <outlet property="captchaTextField" destination="gPg-cg-Yjy" id="2NO-p8-cIW"/>
@@ -211,16 +209,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eHF-WC-RSd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="743.5" y="-8347"/>
+            <point key="canvasLocation" x="1188.8" y="-7508.5457271364321"/>
         </scene>
     </scenes>
     <resources>
         <image name="captcha-info" width="18" height="18"/>
         <image name="captcha-refresh" width="17" height="18"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
-    </simulatedMetricsContainer>
 </document>
